# Canvas

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: .mcp.json  settings.json  settings.local.json
.claude/agents/: architecture-alignment-checker.md  code-reviewer.md  code-simplifier.md  debug-agent.md  design-consistency-checker.md  devops.md  e2e-writer.md  housekeeper.md  implementer.md  performance-reviewer.md  pipeline-orchestrator.md  pr-writer.md  prd-architecture-checker.md  refactorer.md  research-agent.md  security-reviewer.md  spec-reviewer.md  spec-writer.md  task-executor.md  test-writer.md
.claude/commands/: add-feature.md  build-unplanned.md  build.md  check.md  create-pr.md  create-tasks.md  debug.md  design-architecture.md  design-product.md  design.md  help.md  just-do-it.md  refactor.md  resume.md  review.md  scaffold.md  skills.md  source-architecture.md  source-specs.md  spec-sync.md  validate.md  work-on-next.md  work-on.md
.claude/docs/: architecture.md  conventions.md  git-workflow.md  pipeline.md  testing-standard.md
.claude/hooks/: hooks.json
.claude/linters/: file_size.py  layer_deps.py  lint_all.py
alembic/: env.py
canvas_docs/: Canvas 2.0 business requirements and flow diagram.docx  Canvas2.0 Technical Specification.docx  Canvas2.0 ideation text.docx
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
scripts/: setup_all.py  setup_db.py  setup_keycloak.py
specs/: pipeline_status.md
tests/: conftest.py
(+299 files in other folders)
